# sarpine-rs

./: Cargo.toml
sarpine/: Cargo.toml
sarpine/src/: SrpOffer.rs  lib.rs  mod.rs  srp.rs  srp_errors.rs  srp_header.rs  srp_initiate.rs  srp_logic.rs  srp_message.rs
sarpine/src/messages/: mod.rs  srp_accept.rs  srp_confirm.rs  srp_errors.rs  srp_header.rs  srp_initiate.rs  srp_message.rs  srp_offer.rs
sarpine/tests/: mod.rs
spec/: SRP_Proto.docx
