[package]
name = "sarpine"
version = "0.1.0"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/sarpine-rs"
repository = "https://github.com/Devolutions/sarpine-rs"
keywords = ["srp", "authentication", "protocol"]
description = "Secure Remote Password (SRP) extensible authentication protocol"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>", "Ion <banaruion@yahoo.ca>"]

[lib]
name = "sarpine"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
cfg-if = "0.1"
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
hmac = "0.7"
sha2 = "0.8"
srp = { git = "https://github.com/Devolutions/PAKEs", branch = "rfc5054_compat" }
console_error_panic_hook = "0.1.6"
num = "0.2.0"
byteorder = "1.2"
libc = "0.2.40"
